Fix svelte stores, refine invitations UI, bug fixes
