# internal/client/api/http/openapi.json
@@ -463,6 +463,32 @@
             }
           }
         }
+      },
+      "get": {
+        "description": "Returns an invitation",
+        "operationId": "GetInvitation",
+        "responses": {
+          "200": {
+            "description": "Invitation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Invitation"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/invitations": {
